gym ist page content done

--- a/service-details.html
+++ b/service-details.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>FITHUB-Book Now </title>
+  <title>Logis Bootstrap Template - Service Details</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -55,7 +55,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <!-- <li><a href="about.html">About</a></li>
+          <li><a href="about.html">About</a></li>
           <li><a href="services.html">Services</a></li>
           <li><a href="pricing.html">Pricing</a></li>
           <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
@@ -77,12 +77,11 @@
           </li>
           <li><a href="contact.html">Contact</a></li>
           <li><a class="get-a-quote" href="get-a-quote.html">Get a Quote</a></li>
-        </ul> -->
-      <!-- </nav>
-        .navbar -->
+        </ul>
+      </nav><!-- .navbar -->
 
-    <!-- </div>
-  </header>End Header -->
+    </div>
+  </header><!-- End Header -->
   <!-- End Header -->
 
   <main id="main">
@@ -93,8 +92,8 @@
         <div class="container position-relative">
           <div class="row d-flex justify-content-center">
             <div class="col-lg-6 text-center">
-              <h2>AHMED FITNESS</h2>
-              <p>Ahmed fitness gym has modern equipment, motivating vibes, and helpful trainers to support individuals in achieving their fitness goals.</p>
+              <h2>Service Details</h2>
+              <p>Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint voluptas consequatur ut a odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi ratione sint. Sit quaerat ipsum dolorem.</p>
             </div>
           </div>
         </div>
@@ -102,8 +101,8 @@
       <nav>
         <div class="container">
           <ol>
-            <!-- <li><a href="index.html">Home</a></li> -->
-            <li>AHMED FITNESS</li>
+            <li><a href="index.html">Home</a></li>
+            <li>Service Details</li>
           </ol>
         </div>
       </nav>
@@ -115,15 +114,15 @@
 
         <div class="row gy-4">
 
-          <div class="col-lg-4">
+          <!-- <div class="col-lg-4">
             <div class="services-list">
-              <a href="#" class="active">AC</a>
-              <a href="#">Trainer</a>
-              <a href="#">Restroom</a>
-              <a href="#">Parking</a>
+              <a href="#" class="active">Storage</a>
+              <a href="#">Logistics</a>
+              <a href="#">Cargo</a>
+              <a href="#">Trucking</a>
               <a href="#">Packaging</a>
-              <a href="#">Music System</a>
-            </div>
+              <a href="#">Warehousing</a>
+            </div> -->
 
             <h4>Enim qui eos rerum in delectus</h4>
             <p>Nam voluptatem quasi numquam quas fugiat ex temporibus quo est. Quia aut quam quod facere ut non occaecati ut aut. Nesciunt mollitia illum tempore corrupti sed eum reiciendis. Maxime modi rerum.</p>
