--- a/index.html
+++ b/index.html
@@ -92,12 +92,11 @@
           <h2 data-aos="fade-up">Book Gym Per Day </h2>
           <p data-aos="fade-up" data-aos-delay="100">Embracing convenient fitness opportunities expedites the path to building robust health</p>
 
-          <form action="#" class="form-search d-flex align-items-stretch mb-3" data-aos="fade-up" data-aos-delay="200">
-            <input type="text" class="form-control" placeholder="Enter Location">
-            <button type="submit" class="btn btn-primary">Find Gym</button>
-          </form>
-
-          <div class="row gy-4" data-aos="fade-up" data-aos-delay="400">
+          <!-- <form action="#" class="form-search d-flex align-items-stretch mb-3" data-aos="fade-up" data-aos-delay="200">
+             <input type="text" class="form-control" placeholder="Enter Location"> 
+          </form> -->
+          <a href="services.html" class="btn btn-primary d-flex align-items-stretch mb-3">Find Gym</a>
+            <div class="row gy-4" data-aos="fade-up" data-aos-delay="400">
 
             <!-- <div class="col-lg-3 col-6">
               <div class="stats-item text-center w-100 h-100">
