--- a/pricing.html
+++ b/pricing.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Logis Bootstrap Template - Pricing</title>
+  <title>FITHUB</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -47,14 +47,14 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1>Logis</h1>
+        <h1>FITHUB</h1>
       </a>
 
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <!-- <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="services.html">Services</a></li>
           <li><a href="pricing.html" class="active">Pricing</a></li>
@@ -74,9 +74,9 @@
               <li><a href="#">Drop Down 3</a></li>
               <li><a href="#">Drop Down 4</a></li>
             </ul>
-          </li>
+          </li> -->
           <li><a href="contact.html">Contact</a></li>
-          <li><a class="get-a-quote" href="get-a-quote.html">Get a Quote</a></li>
+          <li><a class="get-a-quote" href="get-a-quote.html">Register Your Gym</a></li>
         </ul>
       </nav><!-- .navbar -->
 
@@ -92,7 +92,7 @@
         <div class="container position-relative">
           <div class="row d-flex justify-content-center">
             <div class="col-lg-6 text-center">
-              <h2>Pricing</h2>
+              <h2>AHMED FITNESS GYM</h2>
               <p>Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint voluptas consequatur ut a odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi ratione sint. Sit quaerat ipsum dolorem.</p>
             </div>
           </div>
@@ -101,20 +101,24 @@
       <nav>
         <div class="container">
           <ol>
-            <li><a href="index.html">Home</a></li>
-            <li>Pricing</li>
+            <li><a href="services.html">Our Gyms</a></li>
+            <li></li>Ahmed Fitnesss
           </ol>
         </div>
       </nav>
     </div><!-- End Breadcrumbs -->
 
     <!-- ======= Pricing Section ======= -->
-    <section id="pricing" class="pricing">
+    <!-- <section id="pricing" class="pricing">
       <div class="container" data-aos="fade-up">
+        <div class="section-header">
+          <span>Horizontal Pricing</span>
+          <h2>Horizontal Pricing</h2>
 
-        <div class="row gy-4">
+        </div>
+        <div class="row gy-4"> -->
 
-          <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
+          <!-- <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="pricing-item">
               <h3>Free Plan</h3>
               <h4><sup>$</sup>0<span> / month</span></h4>
@@ -127,9 +131,10 @@
               </ul>
               <a href="#" class="buy-btn">Buy Now</a>
             </div>
-          </div><!-- End Pricing Item -->
+          </div> -->
+          <!-- End Pricing Item -->
 
-          <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
+          <!-- <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
             <div class="pricing-item featured">
               <h3>Business Plan</h3>
               <h4><sup>$</sup>29<span> / month</span></h4>
@@ -142,9 +147,10 @@
               </ul>
               <a href="#" class="buy-btn">Buy Now</a>
             </div>
-          </div><!-- End Pricing Item -->
+          </div> -->
+          <!-- End Pricing Item -->
 
-          <div class="col-lg-4" data-aos="fade-up" data-aos-delay="300">
+          <!-- <div class="col-lg-4" data-aos="fade-up" data-aos-delay="300">
             <div class="pricing-item">
               <h3>Developer Plan</h3>
               <h4><sup>$</sup>49<span> / month</span></h4>
@@ -157,7 +163,8 @@
               </ul>
               <a href="#" class="buy-btn">Buy Now</a>
             </div>
-          </div><!-- End Pricing Item -->
+          </div> -->
+          <!-- End Pricing Item -->
 
         </div>
 
@@ -169,12 +176,12 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
-          <span>Horizontal Pricing</span>
-          <h2>Horizontal Pricing</h2>
+          <span>Details</span>
+          <h2>Details</h2>
 
         </div>
 
-        <div class="row gy-4 pricing-item" data-aos="fade-up" data-aos-delay="100">
+        <!-- <div class="row gy-4 pricing-item" data-aos="fade-up" data-aos-delay="100">
           <div class="col-lg-3 d-flex align-items-center justify-content-center">
             <h3>Free Plan</h3>
           </div>
@@ -191,28 +198,30 @@
           <div class="col-lg-3 d-flex align-items-center justify-content-center">
             <div class="text-center"><a href="#" class="buy-btn">Buy Now</a></div>
           </div>
-        </div><!-- End Pricing Item -->
+        </div> -->
+        <!-- End Pricing Item -->
 
         <div class="row gy-4 pricing-item featured mt-4" data-aos="fade-up" data-aos-delay="200">
           <div class="col-lg-3 d-flex align-items-center justify-content-center">
-            <h3>Business Plan</h3>
+            <h3>Price</h3>
           </div>
           <div class="col-lg-3 d-flex align-items-center justify-content-center">
-            <h4><sup>$</sup>29<span> / month</span></h4>
+            <h4><sup>Rs.</sup>80<span> / session</span></h4>
           </div>
           <div class="col-lg-3 d-flex align-items-center justify-content-center">
             <ul>
-              <li><i class="bi bi-check"></i> Quam adipiscing vitae proin</li>
-              <li><i class="bi bi-check"></i> <strong>Nec feugiat nisl pretium</strong></li>
-              <li><i class="bi bi-check"></i> Nulla at volutpat diam uteera</li>
+              <li><i class="bi bi-check"></i> Morning Shift : 5:00AM to 12:00pm</li>
+              <li><i class="bi bi-check"></i> <strong>Evening Shift: 5:00pm to 12:00am</strong></li>
+              <!-- <li><i class="bi bi-check"></i> Nulla at volutpat diam uteera</li> -->
             </ul>
           </div>
           <div class="col-lg-3 d-flex align-items-center justify-content-center">
             <div class="text-center"><a href="#" class="buy-btn">Buy Now</a></div>
           </div>
-        </div><!-- End Pricing Item -->
+        </div>
+        <!-- End Pricing Item -->
 
-        <div class="row gy-4 pricing-item mt-4" data-aos="fade-up" data-aos-delay="300">
+        <!-- <div class="row gy-4 pricing-item mt-4" data-aos="fade-up" data-aos-delay="300">
           <div class="col-lg-3 d-flex align-items-center justify-content-center">
             <h3>Developer Plan</h3>
           </div>
@@ -232,7 +241,8 @@
         </div><!-- End Pricing Item -->
 
       </div>
-    </section><!-- End Horizontal Pricing Section -->
+    </section>  -->
+    <!-- End Horizontal Pricing Section -->
 
   </main><!-- End #main -->
 
