--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </ul> -->
           </li>
           <li><a href="contact.html">Contact</a></li>
-          <li><a class="get-a-quote" href="get-a-quote.html">Get a Quote</a></li>
+          <li><a class="get-a-quote" href="get-a-quote.html">Register Your Gym</a></li>
         </ul>
       </nav><!-- .navbar -->
 
@@ -144,7 +144,9 @@
     <section id="featured-services" class="featured-services">
       <div class="container">
 
-        <div class="row gy-4">
+        <div class="row gy-4" style="
+        padding-top: 30px;
+    ">
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up">
             <div class="icon flex-shrink-0"><i class="fa-solid fa-circle-dollar-to-slot"></i></div>
@@ -225,7 +227,7 @@
     </section><!-- End About Us Section -->
 
     <!-- ======= Services Section ======= -->
-    <section id="service" class="services pt-0">
+    <!-- <section id="service" class="services pt-0">
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
@@ -244,39 +246,39 @@
               </div>
               <h3><a href="service-details.html" class="stretched-link">AHMED FITNESS</a></h3>
               <p>Rs. xxx/session</p>
-            </div>
+            </div> -->
           </div><!-- End Card Item -->
 
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
+          <!-- <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="card">
               <div class="card-img">
                 <img src="assets\img\new5.jpg" alt="" class="img-fluid">
               </div>
               <h3><a href="service-details.html" class="stretched-link">SJ FITNESS</a></h3>
               <p>Rs. xxx/session</p>
-            </div>
+            </div> -->
           </div><!-- End Card Item -->
 
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
+          <!-- <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="card">
               <div class="card-img">
                 <img src="assets\img\new1.jpg" alt="" class="img-fluid">
               </div>
               <h3><a href="service-details.html" class="stretched-link">GOLDEN FITNESS PRO</a></h3>
               <p>Rs. xxx/session</p>
-            </div>
+            </div> -->
           </div><!-- End Card Item -->
 
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
+          <!-- <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
             <div class="card">
               <div class="card-img">
                 <img src="assets\img\new2.jpg" alt="" class="img-fluid">
               </div>
               <h3><a href="assets\img\new2.jpg" class="stretched-link">TROJAN GYM</a></h3>
               <p>Rs. xxx/session</p>
-            </div>
+            </div> -->
           </div><!-- End Card Item -->
-
+<!-- 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="500">
             <div class="card">
               <div class="card-img">
@@ -284,17 +286,17 @@
               </div>
               <h3><a href="service-details.html" class="stretched-link">AB FITNESS</a></h3>
               <p>Rs. xxx/session</p>
-            </div>
+            </div> -->
           </div><!-- End Card Item -->
 
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="600">
+          <!-- <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="600">
             <div class="card">
               <div class="card-img">
                 <img src="assets\img\new3.jpg" alt="" class="img-fluid">
               </div>
               <h3><a href="service-details.html" class="stretched-link">GYMNATI</a></h3>
               <p>Rs. xxx/session</p>
-            </div>
+            </div> -->
           </div><!-- End Card Item -->
 
         </div>
@@ -318,7 +320,7 @@
     </section><!-- End Call To Action Section -->
 
     <!-- ======= Features Section ======= -->
-    <section id="features" class="features">
+    <!-- <section id="features" class="features">
       <div class="container">
 
         <div class="row gy-4 align-items-center features-item" data-aos="fade-up">
@@ -337,10 +339,10 @@
               <li><i class="bi bi-check"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
               <li><i class="bi bi-check"></i> Ullam est qui quos consequatur eos accusamus.</li>
             </ul>
-          </div>
+          </div> -->
         </div><!-- Features Item -->
 
-        <div class="row gy-4 align-items-center features-item" data-aos="fade-up">
+        <!-- <div class="row gy-4 align-items-center features-item" data-aos="fade-up">
           <div class="col-md-5 order-1 order-md-2">
             <img src="assets/img/features-2.jpg" class="img-fluid" alt="">
           </div>
@@ -355,10 +357,10 @@
               velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
               culpa qui officia deserunt mollit anim id est laborum
             </p>
-          </div>
+          </div> -->
         </div><!-- Features Item -->
 
-        <div class="row gy-4 align-items-center features-item" data-aos="fade-up">
+        <!-- <div class="row gy-4 align-items-center features-item" data-aos="fade-up">
           <div class="col-md-5">
             <img src="assets/img/features-3.jpg" class="img-fluid" alt="">
           </div>
@@ -370,9 +372,9 @@
               <li><i class="bi bi-check"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
               <li><i class="bi bi-check"></i> Facilis ut et voluptatem aperiam. Autem soluta ad fugiat.</li>
             </ul>
-          </div>
+          </div> -->
         </div><!-- Features Item -->
-
+<!-- 
         <div class="row gy-4 align-items-center features-item" data-aos="fade-up">
           <div class="col-md-5 order-1 order-md-2">
             <img src="assets/img/features-4.jpg" class="img-fluid" alt="">
@@ -388,7 +390,7 @@
               velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
               culpa qui officia deserunt mollit anim id est laborum
             </p>
-          </div>
+          </div> -->
         </div><!-- Features Item -->
 
       </div>
@@ -461,7 +463,7 @@
     <!-- End Pricing Section -->
 
     <!-- ======= Testimonials Section ======= -->
-    <section id="testimonials" class="testimonials">
+    <!-- <section id="testimonials" class="testimonials">
       <div class="container">
 
         <div class="slides-1 swiper" data-aos="fade-up">
@@ -480,10 +482,10 @@
                   Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
-              </div>
+              </div> -->
             </div><!-- End testimonial item -->
 
-            <div class="swiper-slide">
+            <!-- <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
                 <h3>Sara Wilsson</h3>
@@ -496,10 +498,10 @@
                   Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
-              </div>
+              </div> -->
             </div><!-- End testimonial item -->
 
-            <div class="swiper-slide">
+            <!-- <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
                 <h3>Jena Karlis</h3>
@@ -512,9 +514,9 @@
                   Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
-              </div>
+              </div> -->
             </div><!-- End testimonial item -->
-
+<!-- 
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
@@ -528,10 +530,10 @@
                   Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
-              </div>
+              </div> -->
             </div><!-- End testimonial item -->
 
-            <div class="swiper-slide">
+            <!-- <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
                 <h3>John Larson</h3>
@@ -544,14 +546,14 @@
                   Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
-              </div>
+              </div> -->
             </div><!-- End testimonial item -->
-
+<!-- 
           </div>
           <div class="swiper-pagination"></div>
         </div>
 
-      </div>
+      </div> -->
     </section><!-- End Testimonials Section -->
 
     <!-- ======= Frequently Asked Questions Section ======= -->
