--- a/services.html
+++ b/services.html
@@ -56,9 +56,9 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="services.html" class="active">Services</a></li>
-          <li><a href="pricing.html">Pricing</a></li>
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
+          <!-- <li><a href="services.html" class="active">Services</a></li>
+          <li><a href="pricing.html">Pricing</a></li> -->
+          <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
               <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
@@ -74,9 +74,9 @@
               <li><a href="#">Drop Down 3</a></li>
               <li><a href="#">Drop Down 4</a></li>
             </ul>
-          </li>
+          </li> -->
           <li><a href="contact.html">Contact</a></li>
-          <li><a class="get-a-quote" href="get-a-quote.html">Get a Quote</a></li>
+          <li><a class="get-a-quote" href="get-a-quote.html">Register Your Gym</a></li>
         </ul>
       </nav><!-- .navbar -->
 
@@ -169,7 +169,7 @@
               <div class="card-img">
                 <img src="assets\img\new6.jpg" alt="" class="img-fluid">
               </div>
-              <h3><a href="service-details.html" class="stretched-link">AHMED FITNESS</a></h3>
+              <h3><a href="travellers details.html" class="stretched-link">AHMED FITNESS</a></h3>
               <p >Male/Female</p>
               <p class="text-end float-end">Ratings: 4.5</span>
               <h4>Rs. 90/session</h4>          
@@ -439,7 +439,8 @@
                     Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
                   </div>
                 </div>
-              </div><!-- # Faq item-->
+              </div>
+              <!-- # Faq item-->
 
               <div class="accordion-item">
                 <h3 class="accordion-header">
@@ -504,7 +505,8 @@
         </div>
 
       </div>
-    </section><!-- End Frequently Asked Questions Section -->
+    </section>
+    <!-- End Frequently Asked Questions Section -->
 
   </main><!-- End #main -->
 
