--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1>Fithub</h1>
+        <img src="assets/img/11.png" alt="">
+        <!-- <h1>Fithub</h1> -->
       </a>
 
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
