--- a/services.html
+++ b/services.html
@@ -46,8 +46,8 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1>FITHUB</h1>
+        <img src="assets/img/logo.png" alt="">
+        <!-- <h1>FITHUB</h1> -->
       </a>
 
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
@@ -171,7 +171,20 @@
             >
               <div class="card">
                 <div class="card-img">
-                  <img src="assets\img\new6.jpg" alt="" class="img-fluid" />
+                  <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                      <div class="carousel-item active" data-bs-interval="2000">
+                        <img src="assets\img\new6.jpg" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item" data-bs-interval="2000">
+                        <img src="assets\img\new6.jpg" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item" data-bs-interval="2000">
+                        <img src="assets\img\new6.jpg" class="d-block w-100" alt="...">
+                      </div>
+                    </div>
+                  </div>
+                  <!-- <img src="assets\img\new6.jpg" alt="" class="img-fluid" /> -->
                 </div>
                 <h3>
                   <a href="Ahmed fitness.html" class="stretched-link"
