--- a/ab fitness.html
+++ b/ab fitness.html
@@ -157,7 +157,7 @@
             <h3 class="accordion-header">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-2">
                 <span class="test"><i class="bi bi-clock-fill text-start float-lg-start"></i></span>
-                Men Timings  <p class="text-end float-end" >6am-11am (morning)  5pm-12pm (evening)</p>              </button>
+                Men Timings  <p class="text-end float-end" >6am-1am(full day)</p>              </button>
             </h3>
             <!-- <div id="faq-content-2" class="accordion-collapse collapse" data-bs-parent="#faqlist">
               <div class="accordion-body">
@@ -171,7 +171,7 @@
             <h3 class="accordion-header">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-3">
                <span class="test"> <i class="bi bi-clock-fill text-start float-lg-start"></i></span>
-                 Women timings  <p class="text-center float-end">12pm-4pm (Afternoon)</p>
+                 Women timings  <p class="text-center float-end">6am-10pm(Seperate women's floor)</p>
                  
               </button>
             </h3>
@@ -285,7 +285,7 @@
       <h4><sup>Rs.</sup>80<span> / session</span></h4>
     </div>
     <div class="col-lg-3 d-flex align-items-center justify-content-center">
-      <div class="text-center"><a href="https://wa.me/6309674614" class="buy-btn btn btn-primary btn-lg">Book Now</a></div>
+      <div class="text-center"><a href="https://wa.me/+91 9182409494" class="buy-btn btn btn-primary btn-lg">Book Now</a></div>
     </div>
   </section>
 
