--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/11.png" alt="">
+        <img src="assets/img/white fitnetwork.png" alt="">
         <!-- <h1>Fithub</h1> -->
       </a>
 
@@ -76,7 +76,7 @@
             </ul> -->
           </li>
           <li><a href="contact.html">Contact</a></li>
-          <li><a class="get-a-quote" href="get-a-quote.html">Register Your Gym</a></li>
+          <!-- <li><a class="get-a-quote" href="get-a-quote.html">Register Your Gym</a></li> -->
         </ul>
       </nav><!-- .navbar -->
 
