--- a/services.html
+++ b/services.html
@@ -184,7 +184,7 @@
                       </div>
                     </div>
                   </div>
-                  <!-- <img src="assets\img\new6.jpg" alt="" class="img-fluid" /> -->
+              
                 </div>
                 <h3>
                   <a href="Ahmed fitness.html" class="stretched-link"
@@ -221,7 +221,19 @@
                         >
                           <div class="card">
                             <div class="card-img">
-                              <img src="assets\img\new3.jpg" alt="" class="img-fluid" />
+                              <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                                <div class="carousel-inner">
+                                  <div class="carousel-item active" data-bs-interval="2000">
+                                    <img src="assets\img\new3.jpg" class="d-block w-100" alt="...">
+                                  </div>
+                                  <div class="carousel-item" data-bs-interval="2000">
+                                    <img src="assets\img\new3.jpg" class="d-block w-100" alt="...">
+                                  </div>
+                                  <div class="carousel-item" data-bs-interval="2000">
+                                    <img src="assets\img\new3.jpg" class="d-block w-100" alt="...">
+                                  </div>
+                                </div>
+                              </div>
                             </div>
                             <h3>
                               <a href="gymnati.html" class="stretched-link"
