--- a/contact.html
+++ b/contact.html
@@ -112,9 +112,10 @@
     <section id="contact" class="contact">
       <div class="container" data-aos="fade-up">
 
-        <div>
+        <!-- <div>
           <iframe style="border:0; width: 100%; height: 340px;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" allowfullscreen></iframe>
-        </div><!-- End Google Maps -->
+        </div> -->
+        <!-- End Google Maps -->
 
         <div class="row gy-4 mt-4">
 
@@ -167,7 +168,7 @@
                 <div class="error-message"></div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
+              <div href="https://wa.me/+91 9182409494" class="text-center"><button type="submit">Send Message</button></div>
             </form>
           </div><!-- End Contact Form -->
 
