--- a/gymnati.html
+++ b/gymnati.html
@@ -285,7 +285,7 @@
       <h4><sup>Rs.</sup>80<span> / session</span></h4>
     </div>
     <div class="col-lg-3 d-flex align-items-center justify-content-center">
-      <div class="text-center"><a href="https://wa.me/6309674614" class="buy-btn btn btn-primary btn-lg">Book Now</a></div>
+      <div class="text-center"><a href="https://wa.me/+91 9182409494" class="buy-btn btn btn-primary btn-lg">Book Now</a></div>
     </div>
   </section>
 
