--- a/Ahmed fitness.html
+++ b/Ahmed fitness.html
@@ -46,7 +46,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/11.png" alt="">
+        <img src="assets/img/white fitnetwork.png" alt="">
         <!-- <h1>Fithub</h1> -->
       </a>
 
@@ -92,13 +92,19 @@
       <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="2000">
-            <img src="assets/img/ah (1).jpg" class="d-block w-100" alt="...">
+            <img src="assets/img/ahmd (2).jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item" data-bs-interval="2000">
-            <img src="assets/img/ah (2).jpg" class="d-block w-100" alt="...">
+            <img src="assets/img/ahmd (4).jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item" data-bs-interval="2000">
-            <img src="assets/img/ah (3).jpg" class="d-block w-100" alt="...">
+            <img src="assets/img/ahmd (7).jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item" data-bs-interval="2000">
+            <img src="assets/img/ahmd (8).jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item" data-bs-interval="2000">
+            <img src="assets/img/ahmd (9).jpg" class="d-block w-100" alt="...">
           </div>
         </div>
       </div>
@@ -282,7 +288,7 @@
       <h3>Price</h3>
     </div>
     <div class="col-lg-3 d-flex align-items-center justify-content-center">
-      <h4><sup>Rs.</sup>80<span> / session</span></h4>
+      <h4><sup>Rs.</sup>69<span> / session</span></h4>
     </div>
     <div class="col-lg-3 d-flex align-items-center justify-content-center">
       <div class="text-center"><a href="https://wa.me/+919182409494" class="buy-btn btn btn-primary btn-lg">Book Now</a></div>
