--- a/ab fitness.html
+++ b/ab fitness.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Logis Bootstrap Template - Service Details</title>
+  <title>Fitnetwork.in</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -46,7 +46,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/11.png" alt="">
+        <img src="assets/img/white fitnetwork.png" alt="">
         <!-- <h1>Fithub</h1> -->
       </a>
 
@@ -92,13 +92,34 @@
       <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="2000">
-            <img src="assets/img/ah (1).jpg" class="d-block w-100" alt="...">
+            <img src="assets/img/ab (1).jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item" data-bs-interval="2000">
-            <img src="assets/img/ah (2).jpg" class="d-block w-100" alt="...">
+            <img src="assets/img/ab (2).jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item" data-bs-interval="2000">
-            <img src="assets/img/ah (3).jpg" class="d-block w-100" alt="...">
+            <img src="assets/img/ab (3).jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item" data-bs-interval="2000">
+            <img src="assets/img/ab (4).jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item" data-bs-interval="2000">
+            <img src="assets/img/ab (5).jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item" data-bs-interval="2000">
+            <img src="assets/img/ab (6).jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item" data-bs-interval="2000">
+            <img src="assets/img/ab (7).jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item" data-bs-interval="2000">
+            <img src="assets/img/ab (8).jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item" data-bs-interval="2000">
+            <img src="assets/img/ab (9).jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item" data-bs-interval="2000">
+            <img src="assets/img/ab (10).jpg" class="d-block w-100" alt="...">
           </div>
         </div>
       </div>
@@ -142,7 +163,7 @@
             <h3 class="accordion-header">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-1">
                <span class="test"> <i class="bi bi-pin-map-fill" aria-hidden="true"></i></span>
-               Address <p class="text-end float-end"> Miraj Colony, Toli Chowki, Hyderabad, Telangana 500008</p>
+               Address <p class="text-end float-end">  Toli Chowki main road, Hyderabad, Telangana 500008</p>
               </button>
             </h3>
             <!-- <div id="faq-content-1" class="accordion-collapse collapse" data-bs-parent="#faqlist">
@@ -282,7 +303,7 @@
       <h3>Price</h3>
     </div>
     <div class="col-lg-3 d-flex align-items-center justify-content-center">
-      <h4><sup>Rs.</sup>80<span> / session</span></h4>
+      <h4><sup>Rs.</sup>95<span> / session</span></h4>
     </div>
     <div class="col-lg-3 d-flex align-items-center justify-content-center">
       <div class="text-center"><a href="https://wa.me/+919182409494" class="buy-btn btn btn-primary btn-lg">Book Now</a></div>
