--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>FITHUB-Book Now</title>
+  <title>FITNETWORK-Book Now</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -665,7 +665,7 @@
       <div class="row gy-4">
         <div class="col-lg-5 col-md-12 footer-info">
           <a href="index.html" class="logo d-flex align-items-center">
-            <span>FITHUB</span>
+            <span>FITNETWORK</span>
           </a>
           <p>Introducing a revolutionary platform that offers flexible gym memberships, allowing you to book and pay for any gym only on a <b>per-session basis</b>. Say goodbye to long-term commitments and only pay for the days you actually use the gym.</p>
           <div class="social-links d-flex mt-4">
@@ -715,7 +715,7 @@
 
     <div class="container mt-4">
       <div class="copyright">
-        &copy; Copyright <strong><span>FITHUB</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>FITNETWORK</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
