--- a/metroflex.html
+++ b/metroflex.html
@@ -46,7 +46,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/11.png" alt="">
+        <img src="assets/img/white fitnetwork.png" alt="">
         <!-- <h1>Fithub</h1> -->
       </a>
 
