--- a/metroflex.html
+++ b/metroflex.html
@@ -5,13 +5,15 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Logis Bootstrap Template - Service Details</title>
+  <title>fitnetwork</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/white fitnetwork.png" rel="icon">
+  <link href="assets/img/white fitnetwork.png
+  
+   png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -282,7 +284,7 @@
       <h3>Price</h3>
     </div>
     <div class="col-lg-3 d-flex align-items-center justify-content-center">
-      <h4><sup>Rs.</sup>80<span> / session</span></h4>
+      <h4><sup>Rs.</sup>79<span> / session</span></h4>
     </div>
     <div class="col-lg-3 d-flex align-items-center justify-content-center">
       <div class="text-center"><a href="https://wa.me/+919182409494" class="buy-btn btn btn-primary btn-lg">Book Now</a></div>
