--- a/services.html
+++ b/services.html
@@ -774,7 +774,7 @@ Really soon, please contact +91 9182409494 to inform the area where you want the
       <div class="row gy-4">
         <div class="col-lg-5 col-md-12 footer-info">
           <a href="index.html" class="logo d-flex align-items-center">
-            <span>FITHUB</span>
+            <span>FITNETWORK</span>
           </a>
           <p>Introducing a revolutionary platform that offers flexible gym memberships, allowing you to book and pay for any gym only on a <b>per-session basis</b>. Say goodbye to long-term commitments and only pay for the days you actually use the gym.</p>
           <div class="social-links d-flex mt-4">
