--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>FITHUB</title>
+  <title>FITNETWORK</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -824,7 +824,7 @@ Really soon, please contact +91 9182409494 to inform the area where you want the
 
     <div class="container mt-4">
       <div class="copyright">
-        &copy; Copyright <strong><span>FITHUB</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>FITNETWORK</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
